fix album alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -594,6 +594,7 @@ text-decoration: none;
    position: relative;
 }
 .album-show{
+   
    /* height: 100%; */
    /* margin: 1px auto; */
    /* padding-top: 5px; */
@@ -613,13 +614,13 @@ text-decoration: none;
 }
 .album-title{
    /* margin: 15px; */
+   width: 100%;
    font-size: 18px;
    font-weight: 700;
    z-index: 100;
    color: white;
    position: absolute;
    top: 25px;
-   left: 500px;
    font-style: oblique;
 }
 .album-art{
@@ -627,7 +628,6 @@ text-decoration: none;
    /* margin: 1px auto; */
    width: 100%;
    /* height: 100%; */
-   margin-top: 5px;
       /* border-radius: 3px; */
 }
 .album-art-div{
